2007-11-29 Eloy Duran <e.duran@superalloy.nl>

	* app_generators/rucola/templates/app/controllers/application_controller.rb,
	  lib/rucola/info_plist.rb,
	  lib/rucola/version.rb,
	  lib/rucola/xcode.rb,
	  test/test_document_model_generator.rb:

	Fixed bugs that were introduced because the default is again to return mutable objects in RC.

2007-11-29 Eloy Duran <e.duran@superalloy.nl>

	* History.txt,
	  README.txt,
	  config/hoe.rb,
	  website/index.html,
	  website/index.txt:

	Updated for 0.0.2.

2007-11-21 Eloy Duran <e.duran@superalloy.nl>

	* lib/rucola/initializer.rb,
	  test/test_initializer.rb:

	- Spec'd the class methods of Initializer.
	- Changed the way plugins are loaded.
	- Refactored some minor stuff.

2007-11-21 Eloy Duran <e.duran@superalloy.nl>

	* TODO,
	  lib/rucola/rucola_support/notifications/notifications.rb,
	  test/test_notifications.rb:

	Reverted the deprecation of Notifications #notify_on and replaced #when with #once.

2007-11-19 Eloy Duran <e.duran@superalloy.nl>

	* rucola_generators/rucola_plugin/templates/init.rb.erb:

	- Use the updated #before_boot & #after_boot methods.
	- Added the new #after_launch method.

2007-11-19 Eloy Duran <e.duran@superalloy.nl>

	* TODO,
	  lib/rucola/initializer.rb,
	  lib/rucola/plugin.rb,
	  lib/rucola/rucola_support/notifications/notifications.rb,
	  test/test_notifications.rb,
	  test/test_plugin.rb:

	- Added Plugin#after_launch which uses a PluginRunner class that uses NSNotifications
	  to run plugin hooks after the application has started.
	- Cleaned the test_notifications file.
	- Added TODO, which is to revert r116.

2007-11-19 Eloy Duran <e.duran@superalloy.nl>

	* lib/rucola/initializer.rb,
	  lib/rucola/plugin.rb,
	  test/test_initializer.rb,
	  test/test_plugin.rb:

	- Fixed Plugin#before_boot and Plugin#after_boot, they can't take a initializer parameter.
	- Refactored the plugin calls.
	- Made initializer use the refactored methods.

2007-11-19 Eloy Duran <e.duran@superalloy.nl>
