@@ -1,5 +1,12 @@
 2007-11-29 Eloy Duran <e.duran@superalloy.nl>
 
+	* lib/rucola/info_plist.rb,
+	  test/test_info_plist.rb:
+
+	InfoPlist#app_name returns a ruby string instead of a NSString.
+
+2007-11-29 Eloy Duran <e.duran@superalloy.nl>
+
 	* app_generators/rucola/templates/app/controllers/application_controller.rb,
 	  lib/rucola/info_plist.rb,
 	  lib/rucola/version.rb,
